# anonymeme

./: .env.development  .env.example  .env.production  .env.production.template  .env.staging  .env.staging.template  .gitignore  AWS_CREDENTIALS_GUIDE.md  CHANGELOG.md  CI_CD_PERFORMANCE_OPTIMIZATION.md  CODE_REVIEW.md  DEPLOYMENT.md  FINAL_SUMMARY.txt  GITHUB_MERGE_STRATEGY.md  GITHUB_SETUP_GUIDE.md  Makefile  PR_DESCRIPTION.md  README.md  README_ENVIRONMENT.md  SECURITY_FIXES.md  SECURITY_WORKFLOW_IMPROVEMENTS.md  TEST_CI_CD.md  WEBSOCKET_INTEGRATION.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  structure.md
backend/: Dockerfile  Dockerfile.websocket  Dockerfile.worker  docker-compose.yml  requirements.txt
contracts/pump-core/programs/pump-core/: Cargo.toml
contracts/pump-core/programs/pump-core/src/: errors.rs  lib.rs  lib.rs.backup  state.rs
contracts/pump-core/programs/pump-core/src/instructions/: admin.rs  bonding_curve.rs  create_token.rs  graduate_to_dex.rs  initialize.rs  list_dex.rs  lp_token_lock.rs  mod.rs  security.rs  trade.rs
contracts/pump-core/programs/pump-core/src/utils/: bonding_curve.rs  mod.rs
docs/: BONDING_CURVES.md  ENVIRONMENT_MANAGEMENT.md  SECURITY.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml  (+1 more)
(+131 files in other folders)
