[package]
name = "pump-core"
version = "0.1.0"
description = "Anonymeme - Core bonding curve contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.16.25"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
raydium-contract-instructions = { git = "https://github.com/raydium-io/raydium-contract-instructions.git" }

[dev-dependencies]
solana-sdk = "1.16.25"
solana-client = "1.16.25"
tokio = { version = "1.0", features = ["full"] }